Add system status page for Investor Portal
This HTML file provides a system status overview for the Investor Portal, including styles for the layout and status indicators for various services.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,213 @@
-inde
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>System Status | Investor Portal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    :root {
+      --bg: #f4f6f9;
+      --card: #ffffff;
+      --primary: #0b1c2d;
+      --on: #16a34a;
+      --off: #dc2626;
+      --muted: #6b7280;
+      --border: #e5e7eb;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: var(--bg);
+      color: #111827;
+    }
+
+    /* HEADER */
+    header {
+      background: linear-gradient(135deg, #0b1c2d, #102a44);
+      color: #fff;
+      padding: 24px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 22px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    header p {
+      margin: 6px 0 0;
+      font-size: 13px;
+      color: #cbd5e1;
+    }
+
+    .pulse {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: #22c55e;
+      box-shadow: 0 0 0 rgba(34,197,94, 0.7);
+      animation: pulse 1.6s infinite;
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(34,197,94, 0.7); }
+      70% { box-shadow: 0 0 0 10px rgba(34,197,94, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(34,197,94, 0); }
+    }
+
+    /* MAIN */
+    main {
+      max-width: 760px;
+      margin: 48px auto;
+      background: var(--card);
+      padding: 28px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+
+    main h2 {
+      margin: 0 0 20px;
+      font-size: 18px;
+      font-weight: 600;
+      border-bottom: 1px solid var(--border);
+      padding-bottom: 10px;
+    }
+
+    .status-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .status-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 14px 0;
+      border-bottom: 1px solid var(--border);
+      font-size: 14px;
+    }
+
+    .status-item:last-child {
+      border-bottom: none;
+    }
+
+    .service {
+      font-weight: 500;
+    }
+
+    .badge {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 12px;
+      font-weight: 600;
+      padding: 6px 12px;
+      border-radius: 999px;
+      text-transform: uppercase;
+    }
+
+    .badge.on {
+      background: #ecfdf5;
+      color: var(--on);
+    }
+
+    .badge.off {
+      background: #fef2f2;
+      color: var(--off);
+    }
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+    }
+
+    .dot.on {
+      background: var(--on);
+    }
+
+    .dot.off {
+      background: var(--off);
+    }
+
+    .note {
+      margin-top: 24px;
+      font-size: 13px;
+      color: var(--muted);
+      line-height: 1.5;
+    }
+
+    /* FOOTER */
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 12px;
+      color: var(--muted);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <h1>
+      Venetta Farm System Status
+      <span class="pulse"></span>
+    </h1>
+    <p>Live operational readiness overview</p>
+  </header>
+
+  <!-- MAIN -->
+  <main>
+    <h2>Current Platform Status</h2>
+
+    <ul class="status-list">
+      <li class="status-item">
+        <span class="service">Website</span>
+        <span class="badge on"><span class="dot on"></span> ON</span>
+      </li>
+      <li class="status-item">
+        <span class="service">Mining Pool</span>
+        <span class="badge off"><span class="dot off"></span> OFF</span>
+      </li>
+      <li class="status-item">
+        <span class="service">Wallet</span>
+        <span class="badge off"><span class="dot off"></span> OFF</span>
+      </li>
+      <li class="status-item">
+        <span class="service">Exchange</span>
+        <span class="badge off"><span class="dot off"></span> OFF</span>
+      </li>
+      <li class="status-item">
+        <span class="service">Hosting Server</span>
+        <span class="badge off"><span class="dot off"></span> OFF</span>
+      </li>
+      <li class="status-item">
+        <span class="service">VPS Server</span>
+        <span class="badge off"><span class="dot off"></span> OFF</span>
+      </li>
+    </ul>
+
+    <div class="note">
+      Status indicators reflect current operational readiness.  
+      Services marked <strong>OFF</strong> are under development, maintenance, or scheduled activation.
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    © 2026 Company Name. All rights reserved.
+  </footer>
+
+</body>
+</html>
