Update footer company name to Venetta Digital Infrastructure

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   <!-- FOOTER -->
   <footer>
-    © 2026 Company Name. All rights reserved.
+    © 2026 Venetta Digital Infrastructure. All rights reserved.
   </footer>
 
 </body>
