--- a/index.html
+++ b/index.html
@@ -173,9 +173,13 @@
 
     <ul class="status-list">
       <li class="status-item">
-        <span class="service">Website</span>
+        <span class="service">Web Server</span>
         <span class="badge on"><span class="dot on"></span> ON</span>
       </li>
+      <li class="status-item">
+        <span class="service">Mail Server</span>
+        <span class="badge on"><span class="dot on"></span> ON</span>
+      </li> 
       <li class="status-item">
         <span class="service">Mining Pool</span>
         <span class="badge off"><span class="dot off"></span> OFF</span>
