--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         <span class="badge on"><span class="dot on"></span> ON</span>
       </li> 
       <li class="status-item">
+        <span class="service">Apps Server</span>
+        <span class="badge on"><span class="dot on"></span> ON</span>
+      </li> 
+      <li class="status-item">
         <span class="service">Mining Pool</span>
         <span class="badge off"><span class="dot off"></span> OFF</span>
       </li>
